update reactor